fix: styling make popup more visible

--- a/quartz/components/styles/curiusPage.scss
+++ b/quartz/components/styles/curiusPage.scss
@@ -44,7 +44,7 @@
   height: 10px;
   z-index: -1;
   background: var(--lightgray);
-  transform: rotate(45deg) translateX(-50%);
+  transform: rotate(45deg);
 }
 
 #curius {
